# samp-argon2

./: Cargo.toml  LICENSE  README.md
include/: samp_argon2.inc
src/: lib.rs
